# sieric-chess-gui

./: Cargo.toml
src/: chess_engine.rs  local_engine.rs  main.rs  remote_engine.rs  remote_host_engine.rs
