[package]
name = "sieric-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { git = "https://github.com/INDA23PlusPlus/tombergm-chess.git" }
chess_network_protocol = { package="chess-network-protocol", git = "https://github.com/INDA23PlusPlus/chess-network-protocol.git" }
ggez = "0.9.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
